syntax = "proto3";

service Blogs {
    rpc FetchArticles(ListRequest) returns (ListResponse);

    rpc GetArticle(Article) returns (Response);
    rpc CreateArticle(Article) returns (Response);
    rpc DeleteArticle(Article) returns (Response);
    rpc UpdateArticle(Article) returns (Response);


    rpc FetchTopics(ListRequest) returns (ListResponse);
    rpc CreateTopic(Topic) returns (Response);
    rpc GetTopic(Topic) returns (Response);

}

enum Status {
	DRAFTED = 0;
	PUBLISHED = 1;
}

message Article {
    uint32 id = 1;
    string title = 2;
    string slug = 3;
    string content = 4;
    Author author = 5;
    Topic topic = 6;
    bool is_published = 7;
    string published_at = 8;
    int64 created_at = 9;
    int64 updated_at = 10;
    int64 deleted_at = 11;

    int32 topic_id = 12;
}

message Topic {
    uint32 id = 1;
    string title = 2;
    string tag = 3;
    string slug = 4;
    string color = 5;
    int64 created_at = 6;
    int64 updated_at = 7;
    int64 deleted_at = 8;
}

message Author {
    uint32 id = 1;
    string name = 2;
    int64 deleted_at = 3;
}

message ListRequest {
    int32 page = 1;
    int32 limit = 2;

    Status status = 3;
}

message ListResponse {
    repeated Article articles = 1;
    repeated Topic topics = 2;
}

message Response {
    Article article = 1;
    Topic topic = 2;
}
